--- a/server/views/index.html
+++ b/server/views/index.html
@@ -6,7 +6,7 @@
     </title>
   </head>
   <body>
-    <h1>Favorites for this user in Vote Right</h1>
+    <h1>Vote Right-Users Favorite Candidates will be listed here</h1>
   </body>
 </html>
 
